Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Kinh tế đêm, động lực tăng trưởng chưa được khai thác hết",
+    "content": "Bài viết đề cập đến tiềm năng phát triển kinh tế đêm gắn liền với kinh tế vỉa hè tại Việt Nam, nhấn mạnh rằng đây không chỉ là cơ hội tăng trưởng kinh tế mà còn giúp tạo việc làm và nâng cao sức hút du lịch. Mặc dù kinh tế đêm đã phát triển mạnh mẽ ở nhiều thành phố lớn trên thế giới, Việt Nam vẫn chưa khai thác hết tiềm năng này do thiếu cơ chế quản lý đồng bộ. Để phát triển kinh tế đêm một cách bền vững, cần có chiến lược quy hoạch rõ ràng, chính sách hỗ trợ cho các hộ kinh doanh nhỏ và khuyến khích đầu tư vào lĩnh vực này.",
+    "link": "https://tuoitre.vn/kinh-te-dem-dong-luc-tang-truong-chua-duoc-khai-thac-het-2025031101495593.htm",
+    "cat": "kinh-doanh",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao kinh tế đêm và kinh tế vỉa hè lại quan trọng cho sự phát triển của Việt Nam?",
+    "answers": [
+      {
+        "text": "Chúng giúp tạo việc làm và thu hút du lịch.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ là một hoạt động giải trí không cần thiết.",
+        "correct": false
+      },
+      {
+        "text": "Không có ảnh hưởng đến nền kinh tế.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ phục vụ cho một số đối tượng nhất định.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Công bố Lệnh của Chủ tịch nước với Luật Ban hành văn bản quy phạm pháp luật",
     "content": "Sáng ngày 11-3, Văn phòng Chủ tịch nước đã công bố Lệnh về Luật Ban hành văn bản quy phạm pháp luật (sửa đổi), với việc Quốc hội thông qua luật này tại kỳ họp bất thường lần thứ 9. Luật mới đã bỏ thẩm quyền ban hành văn bản quy phạm pháp luật của chính quyền cấp xã, giảm số lượng điều khoản từ 173 xuống còn 72 điều, nhằm nâng cao hiệu quả và chất lượng văn bản pháp luật. Đặc biệt, luật quy định rõ trách nhiệm của cơ quan trình dự án luật và cách thức tổ chức thi hành luật sau khi ban hành, đảm bảo sự gắn kết giữa xây dựng và thực thi luật.",
     "link": "https://tuoitre.vn/cong-bo-lenh-cua-chu-tich-nuoc-voi-luat-ban-hanh-van-ban-quy-pham-phap-luat-20250311102842774.htm",
@@ -3633,28 +3660,28 @@
     ]
   },
   {
-    "title": "Cúm ảnh hưởng công việc thế nào?",
-    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
-    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
+    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
+    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
+    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
     "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
     "answers": [
       {
-        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
+        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
         "correct": true
       },
       {
-        "text": "Cúm không ảnh hưởng gì đến công việc.",
+        "text": "Vì họ thường ngồi ở hàng ghế sau.",
         "correct": false
       },
       {
-        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
+        "text": "Vì họ không thích đi xe.",
         "correct": false
       },
       {
-        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
+        "text": "Vì họ yếu sinh lý.",
         "correct": false
       }
     ]
@@ -3691,28 +3718,28 @@
     ]
   },
   {
-    "title": "Vì sao người bị rối loạn tiền đình dễ say xe?",
-    "content": "Người bị rối loạn tiền đình thường dễ bị say xe do sự không đồng nhất giữa thông tin từ mắt và cảm giác từ cơ quan tiền đình trong tai. Khi cơ thể di chuyển, nếu não nhận thông tin mắt thấy người ngồi yên nhưng tai lại cảm nhận chuyển động, sẽ gây ra triệu chứng như chóng mặt và buồn nôn. Để cải thiện tình trạng này, bệnh nhân nên chọn vị trí ngồi hợp lý khi di chuyển và có thể sử dụng một số mẹo như nhìn vào chân trời hoặc ngửi mùi hương từ vỏ cam, chanh. Nếu triệu chứng nặng, cần tham khảo ý kiến bác sĩ để được kiểm tra và điều trị thích hợp.",
-    "link": "https://vnexpress.net/vi-sao-nguoi-bi-roi-loan-tien-dinh-de-say-xe-4859081.html",
+    "title": "Cúm ảnh hưởng công việc thế nào?",
+    "content": "Bệnh cúm có thể ảnh hưởng nghiêm trọng đến sức khỏe và hiệu suất làm việc của người lao động. Khi mắc cúm, người lao động thường phải nghỉ làm, gây gián đoạn trong sản xuất và cung ứng. Sự gia tăng ca mắc cúm trong doanh nghiệp có thể dẫn đến tổn thất kinh tế lớn, với hàng tỷ USD mất mát mỗi năm. Để giảm thiểu tác động của cúm, việc tiêm vaccine hàng năm là rất cần thiết.",
+    "link": "https://vnexpress.net/cum-anh-huong-cong-viec-the-nao-4859106.html",
     "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao người bị rối loạn tiền đình lại dễ say xe?",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Bệnh cúm ảnh hưởng đến công việc như thế nào?",
     "answers": [
       {
-        "text": "Vì có sự không đồng nhất giữa thông tin mắt và tai.",
+        "text": "Cúm làm giảm hiệu suất lao động và gây gián đoạn sản xuất.",
         "correct": true
       },
       {
-        "text": "Vì họ thường ngồi ở hàng ghế sau.",
+        "text": "Cúm không ảnh hưởng gì đến công việc.",
         "correct": false
       },
       {
-        "text": "Vì họ không thích đi xe.",
+        "text": "Cúm chỉ gây ra mệt mỏi nhưng không cần nghỉ làm.",
         "correct": false
       },
       {
-        "text": "Vì họ yếu sinh lý.",
+        "text": "Cúm chỉ ảnh hưởng đến sức khỏe cá nhân, không liên quan đến công việc.",
         "correct": false
       }
     ]
@@ -4583,64 +4610,6 @@
       },
       {
         "text": "Do áp lực công việc của cả hai vợ chồng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nỗi cô đơn của người Việt cao tuổi ở nước ngoài",
-    "content": "Bài viết phản ánh nỗi cô đơn của người Việt cao tuổi sống ở nước ngoài, thông qua câu chuyện của bà Đào Thu, người đã sống ở Canada hơn 5 năm nhưng vẫn cảm thấy lạc lõng và nhớ quê hương. Nhiều người cao tuổi Việt Nam di cư ra nước ngoài gặp khó khăn trong việc hòa nhập do rào cản ngôn ngữ và sự khác biệt về lối sống. Tình trạng cô đơn này không chỉ ảnh hưởng đến tâm lý mà còn tác động đến sức khỏe của họ, với nhiều nghiên cứu chỉ ra rằng người cao tuổi cô đơn có nguy cơ tử vong cao hơn.",
-    "link": "https://vnexpress.net/noi-co-don-cua-nguoi-viet-cao-tuoi-o-nuoc-ngoai-4857042.html",
-    "cat": "gia-dinh",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Người Việt cao tuổi ở nước ngoài thường gặp phải vấn đề gì?",
-    "answers": [
-      {
-        "text": "Cô đơn và khó hòa nhập",
-        "correct": true
-      },
-      {
-        "text": "Thích nghi nhanh chóng với cuộc sống mới",
-        "correct": false
-      },
-      {
-        "text": "Có nhiều bạn bè đồng hương",
-        "correct": false
-      },
-      {
-        "text": "Không nhớ quê hương",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Con trai thực hiện di nguyện hiến giác mạc của cha",
-    "content": "Trong những phút cuối đời, cụ ông 75 tuổi đã dặn con trai thực hiện một điều tốt đẹp, đó là hiến tặng giác mạc để giúp người khác. Anh Phạm Lê Tuấn Nghĩa, sau khi cha qua đời, đã liên hệ với Ngân hàng Mô để thực hiện di nguyện này. Nhóm y bác sĩ đã nhanh chóng di chuyển từ Hà Nội vào TP HCM để thu nhận giác mạc, giúp hai người mù lòa có cơ hội tìm lại ánh sáng. Hành động này không chỉ thể hiện lòng hiếu thảo mà còn góp phần giải quyết tình trạng thiếu giác mạc để ghép cho bệnh nhân mắc các bệnh lý về mắt.",
-    "link": "https://vnexpress.net/con-trai-thuc-hien-di-nguyen-hien-giac-mac-cua-cha-4858776.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Con trai đã thực hiện di nguyện gì của cha mình?",
-    "answers": [
-      {
-        "text": "Hiến tặng giác mạc",
-        "correct": true
-      },
-      {
-        "text": "Tặng nội tạng",
-        "correct": false
-      },
-      {
-        "text": "Đưa cha đi du lịch",
-        "correct": false
-      },
-      {
-        "text": "Xây nhà tưởng niệm",
-        "correct": false
-      },
-      {
-        "text": "Lập quỹ từ thiện",
         "correct": false
       }
     ]
