Update generated content

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Alcaraz thắng trận thứ 14 liên tiếp ở Indian Wells",
+    "content": "Carlos Alcaraz đã giành chiến thắng thứ 14 liên tiếp tại Indian Wells sau khi đánh bại Denis Shapovalov với tỷ số 6-2, 6-4. Trận đấu diễn ra nhanh chóng chỉ trong 82 phút, và Alcaraz tiếp tục duy trì thành tích chưa thua set nào ở giải đấu năm nay. Tay vợt 21 tuổi này hướng tới danh hiệu BNP Paribas Open thứ ba liên tiếp và đang có cơ hội lớn khi nhiều đối thủ mạnh đã bị loại.",
+    "link": "https://vnexpress.net/alcaraz-thang-tran-thu-14-lien-tiep-o-indian-wells-4859592.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Carlos Alcaraz đã thắng bao nhiêu trận liên tiếp tại Indian Wells?",
+    "answers": [
+      {
+        "text": "14 trận",
+        "correct": true
+      },
+      {
+        "text": "12 trận",
+        "correct": false
+      },
+      {
+        "text": "10 trận",
+        "correct": false
+      },
+      {
+        "text": "15 trận",
+        "correct": false
+      },
+      {
+        "text": "11 trận",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Đòi sổ hộ khẩu khi sang tên hợp đồng cấp nước: sao nhiêu khê vậy?",
     "content": "Bài viết đề cập đến việc Công ty cổ phần cấp nước Tân Hòa yêu cầu người dân phải cung cấp sổ hộ khẩu khi thực hiện thủ tục sang tên hợp đồng cấp nước, điều này được cho là không phù hợp với quy định hiện hành. Theo Luật Cư trú 2020, sổ hộ khẩu đã hết giá trị sử dụng từ ngày 1-1-2023, và các cơ quan chức năng chỉ cần tiếp nhận các giấy tờ thay thế khác. Bài viết chỉ trích rằng các yêu cầu này không chỉ gây phiền hà mà còn không phù hợp với các quy định pháp luật hiện tại.",
     "link": "https://tuoitre.vn/doi-so-ho-khau-khi-sang-ten-hop-dong-cap-nuoc-sao-nhieu-khe-vay-20250309152839844.htm",
@@ -1350,6 +1381,37 @@
     ]
   },
   {
+    "title": "Người trẻ chọn sếp",
+    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
+    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
+    "answers": [
+      {
+        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
+        "correct": true
+      },
+      {
+        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
+        "correct": false
+      },
+      {
+        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
+        "correct": false
+      },
+      {
+        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Xe con phóng nhanh gặp xe tải bất ngờ mở cửa",
     "content": "Vào ngày 10/3 tại đường tỉnh 78, Ba Vì, một vụ việc giao thông đã xảy ra khi một xe con đang phóng nhanh với tốc độ hơn 60 km/h gặp phải xe tải đang đỗ lề đường bất ngờ mở cửa. Mặc dù tài xế xe con gắn camera hành trình không giảm tốc độ, may mắn là không có tai nạn xảy ra. Các chuyên gia nhấn mạnh tầm quan trọng của việc giảm tốc độ khi gặp xe lớn đỗ, đồng thời cảnh báo tài xế xe tải cần quan sát kỹ trước khi mở cửa xe để tránh sự cố. Theo luật mới, hành vi mở cửa không an toàn có thể bị phạt đến 22 triệu đồng nếu dẫn đến tai nạn.",
     "link": "https://vnexpress.net/xe-con-phong-nhanh-gap-xe-tai-bat-ngo-mo-cua-4859155.html",
@@ -1403,37 +1465,6 @@
       },
       {
         "text": "Không cần lo lắng về sự phát triển của AI",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Người trẻ chọn sếp",
-    "content": "Bài viết đề cập đến xu hướng ngày càng tăng trong giới trẻ khi chọn lựa sếp làm yếu tố quyết định khi tìm việc. Hà My và Thế Thành, hai nhân viên trẻ, đã chia sẻ trải nghiệm của họ về tầm quan trọng của người quản lý trong môi trường làm việc, cho thấy rằng sếp có khả năng lãnh đạo tốt và đồng cảm sẽ thu hút nhân tài. Các nghiên cứu chỉ ra rằng nhân viên trẻ ngày nay ưu tiên chọn sếp phù hợp hơn là chỉ đơn thuần tìm kiếm công ty có chế độ đãi ngộ tốt.",
-    "link": "https://vnexpress.net/nguoi-tre-chon-sep-4857254.html",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao người trẻ lại chọn sếp khi tìm việc?",
-    "answers": [
-      {
-        "text": "Vì họ muốn làm việc với người có khả năng lãnh đạo tốt và phù hợp với phong cách làm việc của mình.",
-        "correct": true
-      },
-      {
-        "text": "Bởi vì họ thích làm việc trong môi trường có nhiều cơ hội thăng tiến.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ ưu tiên lương thưởng cao hơn mọi yếu tố khác.",
-        "correct": false
-      },
-      {
-        "text": "Bởi vì họ không muốn làm việc dưới sự quản lý nghiêm khắc.",
-        "correct": false
-      },
-      {
-        "text": "Vì họ muốn có thời gian làm việc thoải mái.",
         "correct": false
       }
     ]
@@ -1671,33 +1702,6 @@
     ]
   },
   {
-    "title": "Đời buồn của cậu bé ước được đến trường",
-    "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
-    "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
-    "cat": "giao-duc",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Bình An ước mơ điều gì trong cuộc sống?",
-    "answers": [
-      {
-        "text": "Được đến trường",
-        "correct": true
-      },
-      {
-        "text": "Có nhiều bạn bè",
-        "correct": false
-      },
-      {
-        "text": "Có sức khỏe tốt",
-        "correct": false
-      },
-      {
-        "text": "Được đi du lịch",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Con trai Courtois nguy cơ vô gia cư",
     "content": "Elsa Izac, tình cũ của thủ môn Thibaut Courtois, đang đối mặt với nguy cơ bị tịch thu nhà do khoản nợ 63.000 bảng tiền thế chấp. Cô và con trai 7 tuổi, Enzo, sống trong một ngôi nhà trị giá 3 triệu bảng tại Wimbledon, London, nhưng hiện tại đang gặp khó khăn tài chính. Elsa cho rằng Courtois không hỗ trợ đủ cho mẹ con cô, mặc dù thủ môn này có thu nhập hàng triệu USD từ câu lạc bộ Real Madrid.",
     "link": "https://vnexpress.net/con-trai-courtois-nguy-co-vo-gia-cu-4859328.html",
@@ -1720,6 +1724,33 @@
       },
       {
         "text": "Courtois không muốn chu cấp cho họ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đời buồn của cậu bé ước được đến trường",
+    "content": "Bình An, 9 tuổi, mơ ước được đến trường nhưng đang phải đối mặt với căn bệnh ung thư máu. Gia đình cậu sống trong hoàn cảnh khó khăn, với thu nhập thấp và không đủ khả năng chi trả cho việc điều trị. Dù gặp nhiều khó khăn, mẹ cậu, chị Cẩm Tuyết, vẫn không từ bỏ hy vọng và cùng con chiến đấu với bệnh tật. Chương trình Mặt trời Hy vọng được triển khai nhằm hỗ trợ những trẻ em có hoàn cảnh khó khăn như Bình An.",
+    "link": "https://vnexpress.net/doi-buon-cua-cau-be-uoc-duoc-den-truong-4859070.html",
+    "cat": "giao-duc",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Bình An ước mơ điều gì trong cuộc sống?",
+    "answers": [
+      {
+        "text": "Được đến trường",
+        "correct": true
+      },
+      {
+        "text": "Có nhiều bạn bè",
+        "correct": false
+      },
+      {
+        "text": "Có sức khỏe tốt",
+        "correct": false
+      },
+      {
+        "text": "Được đi du lịch",
         "correct": false
       }
     ]
@@ -2154,6 +2185,33 @@
     ]
   },
   {
+    "title": "Vì sao gọi là bệnh ho gà?",
+    "content": "Bệnh ho gà là một bệnh nhiễm trùng đường hô hấp do vi khuẩn Bordetella Pertussis gây ra, thường gặp ở trẻ nhỏ với đặc trưng là các cơn ho kéo dài kèm theo tiếng rít giống như tiếng gà gáy. Bệnh có thể gây ra nhiều biến chứng nghiêm trọng nếu không được điều trị kịp thời, bao gồm viêm phổi và có thể dẫn đến tử vong. Để phòng ngừa ho gà, tiêm vaccine là biện pháp hiệu quả nhất, với nhiều loại vaccine khác nhau phù hợp cho trẻ em và người lớn.",
+    "link": "https://vnexpress.net/vi-sao-goi-la-benh-ho-ga-4859217.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Vì sao ho gà lại có tên gọi như vậy?",
+    "answers": [
+      {
+        "text": "Vì bệnh gây ra những cơn ho kéo dài với tiếng rít giống như tiếng gà gáy.",
+        "correct": true
+      },
+      {
+        "text": "Bệnh này do virus gây ra.",
+        "correct": false
+      },
+      {
+        "text": "Bệnh chỉ xảy ra ở người lớn.",
+        "correct": false
+      },
+      {
+        "text": "Ho gà là tên một loại thuốc.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Uống gì giảm nguy cơ sỏi thận?",
     "content": "Để giảm nguy cơ sỏi thận, việc uống đủ nước, khoảng hai lít mỗi ngày, là rất quan trọng. Ngoài ra, việc tiêu thụ cà phê vừa phải, trà thảo mộc và các loại nước uống không chứa calo cũng giúp giảm nguy cơ sỏi thận. Cà phê có thể giảm nguy cơ đến 40% nếu tăng lượng tiêu thụ, trong khi trà xanh và sinh tố ít đường cũng có lợi cho sức khỏe thận. Tuy nhiên, cần lưu ý lượng đường và các chất trong nước ép trái cây để tránh tác động xấu đến sức khỏe.",
     "link": "https://vnexpress.net/uong-gi-giam-nguy-co-soi-than-4859161.html",
@@ -2180,33 +2238,6 @@
       },
       {
         "text": "Uống nước trái cây có đường",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vì sao gọi là bệnh ho gà?",
-    "content": "Bệnh ho gà là một bệnh nhiễm trùng đường hô hấp do vi khuẩn Bordetella Pertussis gây ra, thường gặp ở trẻ nhỏ với đặc trưng là các cơn ho kéo dài kèm theo tiếng rít giống như tiếng gà gáy. Bệnh có thể gây ra nhiều biến chứng nghiêm trọng nếu không được điều trị kịp thời, bao gồm viêm phổi và có thể dẫn đến tử vong. Để phòng ngừa ho gà, tiêm vaccine là biện pháp hiệu quả nhất, với nhiều loại vaccine khác nhau phù hợp cho trẻ em và người lớn.",
-    "link": "https://vnexpress.net/vi-sao-goi-la-benh-ho-ga-4859217.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Vì sao ho gà lại có tên gọi như vậy?",
-    "answers": [
-      {
-        "text": "Vì bệnh gây ra những cơn ho kéo dài với tiếng rít giống như tiếng gà gáy.",
-        "correct": true
-      },
-      {
-        "text": "Bệnh này do virus gây ra.",
-        "correct": false
-      },
-      {
-        "text": "Bệnh chỉ xảy ra ở người lớn.",
-        "correct": false
-      },
-      {
-        "text": "Ho gà là tên một loại thuốc.",
         "correct": false
       }
     ]
