--- a/home.html
+++ b/home.html
@@ -233,6 +233,33 @@
     ]
   },
   {
+    "title": "Cựu Tổng thống Philippines Duterte bị bắt",
+    "content": "Cựu Tổng thống Philippines Rodrigo Duterte đã bị bắt giữ tại sân bay quốc tế Manila theo lệnh của Tòa Hình sự Quốc tế (ICC). Ông bị cáo buộc liên quan đến cái chết của hàng nghìn người trong cuộc chiến chống ma túy khi còn đương nhiệm. Cuộc điều tra của ICC đã cho phép mở ra từ tháng 9/2021 về các tội ác chống lại loài người trong chiến dịch này. Mặc dù ông Duterte đã chỉ trích ICC và rút khỏi tổ chức này, nhưng các thẩm phán đã quyết định tiếp tục điều tra.",
+    "link": "https://dantri.com.vn/the-gioi/cuu-tong-thong-philippines-duterte-bi-bat-20250311104237162.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 9,
+    "question": "Tại sao cựu Tổng thống Philippines Duterte bị bắt?",
+    "answers": [
+      {
+        "text": "Vì bị cáo buộc liên quan đến cái chết trong cuộc chiến chống ma túy.",
+        "correct": true
+      },
+      {
+        "text": "Vì tham nhũng trong chính phủ.",
+        "correct": false
+      },
+      {
+        "text": "Vì vi phạm quyền con người.",
+        "correct": false
+      },
+      {
+        "text": "Vì tội danh hình sự khác.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Công bố Lệnh của Chủ tịch nước với Luật Ban hành văn bản quy phạm pháp luật",
     "content": "Sáng ngày 11-3, Văn phòng Chủ tịch nước đã công bố Lệnh về Luật Ban hành văn bản quy phạm pháp luật (sửa đổi), với việc Quốc hội thông qua luật này tại kỳ họp bất thường lần thứ 9. Luật mới đã bỏ thẩm quyền ban hành văn bản quy phạm pháp luật của chính quyền cấp xã, giảm số lượng điều khoản từ 173 xuống còn 72 điều, nhằm nâng cao hiệu quả và chất lượng văn bản pháp luật. Đặc biệt, luật quy định rõ trách nhiệm của cơ quan trình dự án luật và cách thức tổ chức thi hành luật sau khi ban hành, đảm bảo sự gắn kết giữa xây dựng và thực thi luật.",
     "link": "https://tuoitre.vn/cong-bo-lenh-cua-chu-tich-nuoc-voi-luat-ban-hanh-van-ban-quy-pham-phap-luat-20250311102842774.htm",
@@ -1756,33 +1783,6 @@
     ]
   },
   {
-    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
-    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
-    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
-    "cat": "thoi-su",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
-    "answers": [
-      {
-        "text": "2.500",
-        "correct": true
-      },
-      {
-        "text": "10.000",
-        "correct": false
-      },
-      {
-        "text": "8.500",
-        "correct": false
-      },
-      {
-        "text": "5.000",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Cả nước dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
     "content": "Phó thủ tướng Nguyễn Hòa Bình cho biết cả nước dự kiến sẽ giảm số lượng đơn vị hành chính cấp xã từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc này dự kiến sẽ hoàn thành vào tháng 6 tới, với các tiêu chí sẽ được Trung ương ban hành để các địa phương lập phương án sắp xếp. Chất lượng cán bộ cấp xã cũng sẽ được nâng cao, nhằm tăng cường hiệu quả quản lý.",
     "link": "https://vnexpress.net/ca-nuoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
@@ -1809,6 +1809,33 @@
       },
       {
         "text": "3.500",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Toàn quốc dự kiến giảm còn 2.500 đơn vị hành chính cấp xã",
+    "content": "Phó thủ tướng Nguyễn Hòa Bình thông báo rằng số lượng đơn vị hành chính cấp xã trên toàn quốc sẽ giảm từ hơn 10.500 xuống còn 2.500 sau khi thực hiện sáp nhập. Việc sáp nhập này dự kiến sẽ hoàn thành vào tháng 6 năm 2025. Trung ương sẽ ban hành tiêu chí cho các địa phương để xây dựng phương án sắp xếp, đồng thời nâng cao chất lượng cán bộ cấp xã để tương đương với cán bộ cấp tỉnh.",
+    "link": "https://vnexpress.net/toan-quoc-du-kien-giam-con-2-500-don-vi-hanh-chinh-cap-xa-4859152.html",
+    "cat": "thoi-su",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Việt Nam dự kiến có bao nhiêu đơn vị hành chính cấp xã sau khi sáp nhập?",
+    "answers": [
+      {
+        "text": "2.500",
+        "correct": true
+      },
+      {
+        "text": "10.000",
+        "correct": false
+      },
+      {
+        "text": "8.500",
+        "correct": false
+      },
+      {
+        "text": "5.000",
         "correct": false
       }
     ]
@@ -2069,33 +2096,6 @@
     ]
   },
   {
-    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
-    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
-    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
-    "answers": [
-      {
-        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng doanh số bán hàng.",
-        "correct": false
-      },
-      {
-        "text": "Để giới thiệu mẫu xe mới.",
-        "correct": false
-      },
-      {
-        "text": "Để thay đổi thiết kế xe.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "6 nhóm thực phẩm người hen phế quản nên tránh",
     "content": "Bài viết liệt kê 6 nhóm thực phẩm mà người mắc bệnh hen phế quản nên tránh để phòng ngừa các cơn hen tái phát. Các loại thực phẩm này bao gồm thực phẩm giàu calo, thực phẩm có gas, thực phẩm chứa chất bảo quản, thực phẩm gây dị ứng, thực phẩm mặn và các chất béo không lành mạnh. Những thực phẩm này có thể làm trầm trọng thêm tình trạng bệnh và gây khó khăn trong việc hô hấp. Người bệnh nên chú ý đến chế độ ăn uống để kiểm soát triệu chứng hiệu quả hơn.",
     "link": "https://vnexpress.net/6-nhom-thuc-pham-nguoi-hen-phe-quan-nen-tranh-4859245.html",
@@ -2122,6 +2122,33 @@
       },
       {
         "text": "Thực phẩm chiên và đồ ăn nhanh",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Triệu hồi sản phẩm thể hiện trách nhiệm của hãng xe",
+    "content": "Triệu hồi sản phẩm là một hành động quan trọng trong ngành ôtô, thể hiện trách nhiệm của các hãng xe đối với khách hàng khi phát hiện rủi ro về sản phẩm. Mới đây, Yamaha Motor Việt Nam đã triệu hồi gần 160.000 xe sản xuất từ tháng 10/2021 đến tháng 11/2024 để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa. Hãng xe này cam kết sẽ đảm bảo an toàn cho người dùng và thực hiện kiểm tra miễn phí cho khách hàng.",
+    "link": "https://vnexpress.net/trieu-hoi-san-pham-the-hien-trach-nhiem-cua-hang-xe-4859319.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao Yamaha Motor Việt Nam triệu hồi gần 160.000 xe?",
+    "answers": [
+      {
+        "text": "Để kiểm tra bề mặt số động cơ có dấu hiệu bị sửa chữa.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng doanh số bán hàng.",
+        "correct": false
+      },
+      {
+        "text": "Để giới thiệu mẫu xe mới.",
+        "correct": false
+      },
+      {
+        "text": "Để thay đổi thiết kế xe.",
         "correct": false
       }
     ]
@@ -2185,33 +2212,6 @@
     ]
   },
   {
-    "title": "Vì sao gọi là bệnh ho gà?",
-    "content": "Bệnh ho gà là một bệnh nhiễm trùng đường hô hấp do vi khuẩn Bordetella Pertussis gây ra, thường gặp ở trẻ nhỏ với đặc trưng là các cơn ho kéo dài kèm theo tiếng rít giống như tiếng gà gáy. Bệnh có thể gây ra nhiều biến chứng nghiêm trọng nếu không được điều trị kịp thời, bao gồm viêm phổi và có thể dẫn đến tử vong. Để phòng ngừa ho gà, tiêm vaccine là biện pháp hiệu quả nhất, với nhiều loại vaccine khác nhau phù hợp cho trẻ em và người lớn.",
-    "link": "https://vnexpress.net/vi-sao-goi-la-benh-ho-ga-4859217.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Vì sao ho gà lại có tên gọi như vậy?",
-    "answers": [
-      {
-        "text": "Vì bệnh gây ra những cơn ho kéo dài với tiếng rít giống như tiếng gà gáy.",
-        "correct": true
-      },
-      {
-        "text": "Bệnh này do virus gây ra.",
-        "correct": false
-      },
-      {
-        "text": "Bệnh chỉ xảy ra ở người lớn.",
-        "correct": false
-      },
-      {
-        "text": "Ho gà là tên một loại thuốc.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Uống gì giảm nguy cơ sỏi thận?",
     "content": "Để giảm nguy cơ sỏi thận, việc uống đủ nước, khoảng hai lít mỗi ngày, là rất quan trọng. Ngoài ra, việc tiêu thụ cà phê vừa phải, trà thảo mộc và các loại nước uống không chứa calo cũng giúp giảm nguy cơ sỏi thận. Cà phê có thể giảm nguy cơ đến 40% nếu tăng lượng tiêu thụ, trong khi trà xanh và sinh tố ít đường cũng có lợi cho sức khỏe thận. Tuy nhiên, cần lưu ý lượng đường và các chất trong nước ép trái cây để tránh tác động xấu đến sức khỏe.",
     "link": "https://vnexpress.net/uong-gi-giam-nguy-co-soi-than-4859161.html",
@@ -2238,6 +2238,33 @@
       },
       {
         "text": "Uống nước trái cây có đường",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vì sao gọi là bệnh ho gà?",
+    "content": "Bệnh ho gà là một bệnh nhiễm trùng đường hô hấp do vi khuẩn Bordetella Pertussis gây ra, thường gặp ở trẻ nhỏ với đặc trưng là các cơn ho kéo dài kèm theo tiếng rít giống như tiếng gà gáy. Bệnh có thể gây ra nhiều biến chứng nghiêm trọng nếu không được điều trị kịp thời, bao gồm viêm phổi và có thể dẫn đến tử vong. Để phòng ngừa ho gà, tiêm vaccine là biện pháp hiệu quả nhất, với nhiều loại vaccine khác nhau phù hợp cho trẻ em và người lớn.",
+    "link": "https://vnexpress.net/vi-sao-goi-la-benh-ho-ga-4859217.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Vì sao ho gà lại có tên gọi như vậy?",
+    "answers": [
+      {
+        "text": "Vì bệnh gây ra những cơn ho kéo dài với tiếng rít giống như tiếng gà gáy.",
+        "correct": true
+      },
+      {
+        "text": "Bệnh này do virus gây ra.",
+        "correct": false
+      },
+      {
+        "text": "Bệnh chỉ xảy ra ở người lớn.",
+        "correct": false
+      },
+      {
+        "text": "Ho gà là tên một loại thuốc.",
         "correct": false
       }
     ]
@@ -4654,33 +4681,6 @@
       },
       {
         "text": "Giảm số lượng du khách đến Việt Nam",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Phát lệnh truy nã đặc biệt nghi phạm nằm trong đường dây lừa đảo của Mr. Pips Phó Đức Nam",
-    "content": "Công an Đà Nẵng đã phát lệnh truy nã đặc biệt đối với Trịnh Văn Thái, một nghi phạm liên quan đến đường dây lừa đảo chiếm đoạt tài sản do TikToker Mr. Pips - Phó Đức Nam cầm đầu. Thái bị cáo buộc có liên quan đến tội lừa đảo theo quy định của Bộ luật hình sự. Đường dây này đã bị triệt xóa, với hàng chục nghi phạm bị bắt giữ và tài sản bị thu giữ lên đến hơn 5.200 tỉ đồng. Hiện Thái đã bỏ trốn nên cơ quan điều tra yêu cầu mọi người hỗ trợ bắt giữ.",
-    "link": "https://tuoitre.vn/phat-lenh-truy-na-dac-biet-nghi-pham-nam-trong-duong-day-lua-dao-cua-mr-pips-pho-duc-nam-20250310105430996.htm",
-    "cat": "phap-luat",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Trịnh Văn Thái bị truy nã vì tội gì?",
-    "answers": [
-      {
-        "text": "Lừa đảo chiếm đoạt tài sản",
-        "correct": true
-      },
-      {
-        "text": "Trộm cắp",
-        "correct": false
-      },
-      {
-        "text": "Buôn bán ma túy",
-        "correct": false
-      },
-      {
-        "text": "Giết người",
         "correct": false
       }
     ]
